--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
