--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
           xmlns:tools="http://schemas.android.com/tools" package="com.ubicomp.mstokfisz.heatapp">
 
     <uses-feature android:name="android.hardware.usb.host" />
-    <application android:allowBackup="true"
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <application android:allowBackup="false"
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
@@ -22,5 +25,4 @@
                 android:name="com.google.firebase.ml.vision.DEPENDENCIES"
                 android:value="face"/>
     </application>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-*
 </manifest>
